--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,20 +27,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+
+  cupertino_icons: ^1.0.2
   http: ^0.13.4
+  shared_preferences: ^2.0.12
   connectivity_plus: ^2.2.0
   cool_alert: ^1.1.0
+  crypto: ^3.0.1
+  device_info_plus: ^3.2.1
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
